# bdk-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  NEW_FEATURE.md  README.md  bip322_usage.md  build.rs  clippy.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  minor_release.md  patch_release.md
.github/workflows/: audit.yml  code_coverage.yml  cont_integration.yml
ci/: pin-msrv.sh  test_features.sh
src/: backend.rs  bdk_cli.rs  client.rs  commands.rs  config.rs  descriptor_handler.rs  dns_payment_instructions.rs  error.rs  handlers.rs  lib.rs  main.rs  nodes.rs  persister.rs  repl.rs  utils.rs  wasm.rs
src/backend/: mod.rs
src/commands/: mod.rs
src/config/: mod.rs
src/handlers/: config.rs  descriptor.rs  dns.rs  key.rs  mod.rs  offline.rs  online.rs  repl.rs  types.rs  wallets.rs
src/handlers/dns/: mod.rs
src/handlers/payjoin/: db.rs  mod.rs  ohttp.rs
src/payjoin/: db.rs  mod.rs  ohttp.rs
src/utils/: common.rs  descriptors.rs  mod.rs  output.rs  runtime.rs  types.rs
src/wallet/: mod.rs  persister.rs
tests/: cli.rs  cli_flags.rs  compile.rs  integration.rs
tests/common/: mod.rs
tests/integration/: init.rs  offline.rs  online.rs
