[package]
name = "bdk-cli"
version = "1.0.0"
edition = "2024"
authors = ["Alekos Filini <alekos.filini@gmail.com>", "Riccardo Casatta <riccardo@casatta.it>", "Steve Myers <steve@notmandatory.org>"]
homepage = "https://bitcoindevkit.org"
repository = "https://github.com/bitcoindevkit/bdk-cli"
documentation = "https://docs.rs/bdk-cli"
description = "An experimental CLI wallet application and playground, powered by BDK"
keywords = ["bitcoin", "wallet", "descriptor", "psbt", "taproot"]
readme = "README.md"
license = "MIT"

[dependencies]
bdk_wallet = { version = "2.0.0", features = ["rusqlite", "keys-bip39", "compiler", "std"] }
clap = { version = "4.5", features = ["derive","env"] }
dirs = {  version = "6.0.0" }
env_logger = "0.11.6"
log = "0.4"
serde_json = "1.0"
thiserror = "2.0.11"
tokio = { version = "1", features = ["full"] }
cli-table = "0.5.0"

# Optional dependencies
bdk_bitcoind_rpc = { version = "0.20.0", optional = true }
bdk_electrum = { version = "0.23.0", optional = true }
bdk_esplora = { version = "0.22.0", features = ["async-https", "tokio"], optional = true }
bdk_kyoto = { version = "0.11.0", optional = true }
bdk_redb = { version = "0.1.0", optional = true }
shlex = {  version = "1.3.0", optional = true }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[features]
default = ["repl", "sqlite"]

# To use the app in a REPL mode
repl = ["shlex"]

# Available database options
sqlite = ["bdk_wallet/rusqlite"]
redb = ["bdk_redb"]

# Available blockchain client options
cbf = ["bdk_kyoto"]
electrum = ["bdk_electrum"]
esplora = ["bdk_esplora"]
rpc = ["bdk_bitcoind_rpc"]

# Use this to consensus verify transactions at sync time
verify = []

# Extra utility tools
# Compile policies
compiler = []
